add swap-pane keybinding

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -53,6 +53,10 @@ bind A command-prompt "rename-window %%"
 
 bind m command-prompt "setw monitor-content %%"
 
+# swap current pane with the input pane
+# possible inputs: panel:misc.1(session-name:window-name.pane-index), bash(window-name, pane-index default is 0), 2(window-index)
+bind C-s command-prompt "swap-pane -s %%"
+
 # bindings for vi-* mode
 bind -t vi-choice C-b page-up
 bind -t vi-copy   C-b page-up
