--- a/.ncmpcpp/config
+++ b/.ncmpcpp/config
@@ -235,6 +235,7 @@ mpd_music_dir = "~/Music"
 #default_place_to_search_in = "database" (database/playlist)
 #
 #user_interface = "classic" (classic/alternative)
+user_interface = "alternative"
 #
 #media_library_left_column = "a" (possible values: a,y,g,c,p, legend above)
 #
@@ -259,6 +260,7 @@ mpd_music_dir = "~/Music"
 #lines_scrolled = "2"
 #
 #follow_now_playing_lyrics = "no"
+follow_now_playing_lyrics = "yes"
 #
 #ncmpc_like_songs_adding = "no" (enabled - add/remove, disabled - always add)
 #
