--- a/.rdebugrc
+++ b/.rdebugrc
@@ -1,3 +1,3 @@
 set autoeval on # if the input is not rdb command, then eval it as ruby code
 set forcestep on # skip duplicate lines during step
-set autolist 1
+#set autolist 1
