--- a/.tmux.conf
+++ b/.tmux.conf
@@ -61,6 +61,8 @@ bind C-s command-prompt "swap-pane -s %%"
 bind -t vi-choice C-b page-up
 bind -t vi-copy   C-b page-up
 
+bind C-f pipe-pane -o '~/.tmux/pipes/rdb'
+
 #}}}1
 
 # {{{1 window options 
