update tmux config

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -61,7 +61,10 @@ bind C-s command-prompt "swap-pane -s %%"
 bind -t vi-choice C-b page-up
 bind -t vi-copy   C-b page-up
 
-bind C-f pipe-pane -o '~/.tmux/pipes/rdb'
+bind C-d pipe-pane -o '~/.tmux/pipes/rdb'
+bind C-f pipe-pane -o '~/.tmux/pipes/notification'
+
+bind-key & command-prompt -p 'join with:' 'join-pane -h -t %%'
 
 #}}}1
 
