--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule ".vim"]
 	path = .vim
 	url = git://github.com/linsong/vim-config.git
+[submodule ".mutt"]
+	path = .mutt
+	url = git@github.com:linsong/mutt-config.git
