--- a/.gitignore
+++ b/.gitignore
@@ -194,3 +194,20 @@ Library/Recent Servers
 .sw?
 .awssecret
 .vim/sessions
+.bundle/
+.irssi/config.autosave
+.lftp/transfer_log
+.monit.id
+.recently-used.xbel
+.s3cfg_seravia_prod
+.w3m/w3m*
+Library/Breakpad/
+Library/Spelling/
+about
+data/pc_backup/
+data/sn.txt
+projects/
+tmux.conf.local
+tools/aws
+tools/socks_proxy.sh
+
