--- a/.monitrc
+++ b/.monitrc
@@ -229,3 +229,8 @@ check process imap with pidfile /Users/vincent/.offlineimap/pid
   start program = "/opt/local/bin/offlineimap -u Noninteractive.Basic"
   # monit use exec to run command, so we need to use bash -c for shell commmand
   stop program  = "/bin/bash -c '/bin/kill `/bin/cat /Users/vincent/.offlineimap/pid`'"
+
+check process mpd with pidfile /Users/vincent/.mpd/mpd.pid
+  start program = "/opt/local/bin/mpd --no-daemon /Users/vincent/.mpdconf_for_macosx"
+  # monit use exec to run command, so we need to use bash -c for shell commmand
+  stop program  = "/bin/bash -c '/bin/kill `/bin/cat /Users/vincent/.mpd/mpd.pid`'"
