--- a/.gitignore
+++ b/.gitignore
@@ -210,5 +210,5 @@ projects/
 tmux.conf.local
 tools/aws
 tools/socks_proxy.sh
-custom/seravia.bash
-old_conf/.bashrc.local
+.my_bash/old_conf/.bashrc.local
+.my_bash/custom/seravia.bash
