--- a/.tmux.conf
+++ b/.tmux.conf
@@ -98,6 +98,10 @@ setw -g window-status-current-attr reverse
 # }}}1
 
 # {{{1 status bar
+set -g status-keys vi
+set -g display-time 2000
+
+set -g status-utf8 on
 set -g status-bg cyan
 set -g status-interval 5
 
@@ -106,13 +110,18 @@ set -g status-interval 5
 #set -g message-fg black 
 #set -g message-bg white
 
-set -g status-left-length 16
-set -g status-right-length 50
-set -g status-left '#[fg=magenta,bold][#14H:#S]#[default]'
-set -g status-right '|#[fg=magenta,bold]#(load.sh)#[default]| #[fg=yellow,bold][%a %m/%d %H:%M]#[default]'
-#set -g status-right '#[fg=yellow,bold]|#(uptime)|[%a %m/%d %H:%M]#[default]'
+# for no-unicode terminal
+#set -g status-left-length 16
+#set -g status-right-length 50
+#set -g status-left '#[fg=magenta,bold][#14H:#S]#[default]'
+#set -g status-right '|#[fg=magenta,bold]#(load.sh)#[default]| #[fg=yellow,bold][%a %m/%d %H:%M]#[default]'
 
-#set -g status-keys vi
+# for unicode terminal
+set -g status-left-length 60
+set -g status-right-length 1000
+set -g status-left ' ❐ #[fg=magenta,bold]#S#[default] ▐ '
+set -g status-right '▐ ♫ #[fg=green]#(mpc current)#[default]▐ ❖ #[fg=magenta,bold]#(load.sh)#[default]▐ ⌚ #[fg=yellow,bold]%a %m/%d %H:%M#[default]▐ #[fg=colour200]@#H#[default]'
+
 # }}}1
 
 source-file '/Users/vincent/.tmux.conf.local'
